--- a/dd.html
+++ b/dd.html
@@ -25,7 +25,7 @@
 														<a href="http://www.nuevosol.co.in/" style=
 														"display:inline-block;text-align:center" target=
 														"_blank"><img alt="Nuevosol" border="0" height="24" src=
-														"nuevosol-title.png" width="104"></a>
+														"https://s3.amazonaws.com/nuevo-email/nuevosol-title.png" width="104"></a>
 													</td>
 												</tr>
 												<tr>
